--- a/index.css
+++ b/index.css
@@ -1155,6 +1155,23 @@
     min-height: 1260px;
   }
 
+  .u-section-4 .u-layout-cell-1 {
+    min-height: 524px;
+  }
+
+  .u-section-4 .u-container-layout-1 {
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  .u-section-4 .u-text-1 {
+    margin-left: 14px;
+  }
+
+  .u-section-4 .u-group-1 {
+    margin-left: 10px;
+  }
+
   .u-section-4 .u-text-2 {
     margin-top: 22px;
     margin-right: 0;
@@ -1164,5 +1181,21 @@
   .u-section-4 .u-icon-1 {
     margin-top: -109px;
     margin-left: 9px;
+  }
+
+  .u-section-4 .u-text-3 {
+    margin-left: 12px;
+  }
+
+  .u-section-4 .u-text-4 {
+    width: auto;
+    margin-top: 30px;
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+
+  .u-section-4 .u-btn-1 {
+    margin-top: 14px;
+    margin-left: 10px;
   }
 }
